--- a/quiplash.html
+++ b/quiplash.html
@@ -57,6 +57,8 @@
         </div>
 
     </article>
+    <img id="QRcode" src="" alt="codigoQR">
+    
 </section>
 <section id="typing"></section>
 <section id="round">
@@ -80,5 +82,6 @@
 <section id="scoring"></section>
 </body>
 <script src="js/Clases.js"></script>
+<script src="js/generarQRLobby.js"></script>
 
 </html>
