Conexión Servidor Node JS y MySQL

--- a/quiplash.html
+++ b/quiplash.html
@@ -5,6 +5,8 @@
     <title>Quiplash</title>
     <link href="css/quiplash/lobby.css" type="text/css" rel="stylesheet">
     <link href="css/quiplash/ronda.css" type="text/css" rel="stylesheet">
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script defer src="js/cliente.js"></script>
 </head>
 <body>
 <button onclick="mostrarJugador()">Añadir Jugador</button>
