--- a/index.html
+++ b/index.html
@@ -7,31 +7,49 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menú principal</title>
     <link rel="stylesheet" type="text/css" href="css/menuPrincipal.css">
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script defer src="js/cliente.js"></script>
 </head>
 <body>
     <main>
 
         <fieldset id="joinGame">
             <legend>Unirse A Partida</legend>
-            <form action="./establecerConexion.php" method="post">
+            <form onsubmit="return false;">
                 <label for="nombreJugador">Nombre: </label>
                 <input type="text" name="username" id="nombreJugador" required>
                 <label for="gameCode">Código partida: </label>
                 <input type="text" name="code" id="gameCode" minlength="4" maxlength="4" required>
-                <input type="submit" value="Unirse">
+                <input type="submit" value="Unirse" id="unirsePartida">
             </form>
         </fieldset>
 
-        <fieldset id="crearPartida">
+        <fieldset id="crearPartidaForm">
             <legend>Crear Partida</legend>
-            <form action="./crearPartida.php" method="post">
+            <form onsubmit="return false;">
+                <label for="nombreHost">Nombre: </label>
+                <input type="text" name="username" id="nombreHost" required>
                 <label for="modoDeJuego">Modo de juego: </label>
                 <select name="juego" id="modoDeJuego">
                     <option value="quiplash" selected>Quiplash</option>
                 </select>
-                <input type="submit" value="Crear">
+                <input type="submit" value="Crear" id="crearPartida">
             </form>
         </fieldset>
     </main>
+    <script>
+ 
+        document.getElementById('crearPartida').addEventListener('click', function(event) {
+        
+            socket.emit('create', document.getElementById("nombreHost").value, document.getElementById("modoDeJuego").value);
+            return false;
+        });
+
+        document.getElementById('unirsePartida').addEventListener('click', function(event) {
+    
+            socket.emit('join', document.getElementById("nombreJugador").value, document.getElementById("gameCode").value);
+            return false;
+        });
+    </script>
 </body>
 </html>
