--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <fieldset id="joinGame">
             <legend>Unirse A Partida</legend>
-            <form onsubmit="return false;">
+            <form action="quiplash.html" method="get">
                 <label for="nombreJugador">Nombre: </label>
                 <input type="text" name="username" id="nombreJugador" required>
                 <label for="gameCode">Código partida: </label>
@@ -26,7 +26,7 @@
 
         <fieldset id="crearPartidaForm">
             <legend>Crear Partida</legend>
-            <form onsubmit="return false;">
+            <form action="quiplash.html" method="get">
                 <label for="nombreHost">Nombre: </label>
                 <input type="text" name="username" id="nombreHost" required>
                 <label for="modoDeJuego">Modo de juego: </label>
