--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <!--    <script defer src="js/cliente.js"></script>-->
 </head>
 <body>
+    <nav id="navigation"></nav>
+
     <main>
 
         <fieldset id="joinGame">
