Agregados nuevos componentes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Menú principal</title>
     <link rel="stylesheet" type="text/css" href="css/menuPrincipal.css">
 <!--    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>-->
-<!--    <script defer src="js/cliente.js"></script>-->
+<!--    <script defer src="componentes/cliente.componentes"></script>-->
 </head>
 <body>
     <nav id="navigation"></nav>
