Generación QR Lobby

--- a/quiplash.html
+++ b/quiplash.html
@@ -6,7 +6,7 @@
     <link href="css/quiplash/lobby.css" type="text/css" rel="stylesheet">
     <link href="css/quiplash/ronda.css" type="text/css" rel="stylesheet">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script defer src="js/cliente.js"></script>
+    <script defer src="src/scripts/cliente.js"></script>
 </head>
 <body>
 <section id="lobby">
@@ -99,7 +99,7 @@
 </section>
 <section id="scoring"></section>
 </body>
-<script src="js/Clases.js"></script>
-<script src="js/generarQRLobby.js"></script>
+<script src="src/scripts/Clases.js"></script>
+<script src="src/scripts/generarQRLobby.js"></script>
 
 </html>
